fix: long verse wrap

--- a/static/style.css
+++ b/static/style.css
@@ -53,6 +53,7 @@ body {
 #lyrics {
 	color: #171717;
 	line-height: 2.5rem;
+	flex-basis: 0;
 	flex-shrink: 0;
 	flex-grow: 1;
 }
